--- a/src/scss/phy/isaac.scss
+++ b/src/scss/phy/isaac.scss
@@ -81,6 +81,8 @@ $question-font-weight: 600;
 // forms
 $border-color: black;
 
+$enable-negative-margins: true;
+
 // ISAAC
 // Node module imports
 @import "~bootstrap/scss/functions";
